infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  selector:
    matchLabels:
      app: orders
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: orders
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: orders
          image: rajasingh545/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
  namespace: default
spec:
  selector:
    app: orders
  type: ClusterIP
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
